# serializer version: 1
# name: TestPluginAPI.test_listing_plugins_is_not_nplus1
  '''
  SELECT "markettor_user"."id",
         "markettor_user"."password",
         "markettor_user"."last_login",
         "markettor_user"."first_name",
         "markettor_user"."last_name",
         "markettor_user"."is_staff",
         "markettor_user"."is_active",
         "markettor_user"."date_joined",
         "markettor_user"."uuid",
         "markettor_user"."current_organization_id",
         "markettor_user"."current_team_id",
         "markettor_user"."email",
         "markettor_user"."pending_email",
         "markettor_user"."temporary_token",
         "markettor_user"."distinct_id",
         "markettor_user"."is_email_verified",
         "markettor_user"."has_seen_product_intro_for",
         "markettor_user"."strapi_id",
         "markettor_user"."theme_mode",
         "markettor_user"."partial_notification_settings",
         "markettor_user"."anonymize_data",
         "markettor_user"."toolbar_mode",
         "markettor_user"."hedgehog_config",
         "markettor_user"."events_column_config",
         "markettor_user"."email_opt_in"
  FROM "markettor_user"
  WHERE "markettor_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestPluginAPI.test_listing_plugins_is_not_nplus1.1
  '''
  SELECT "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_organization"
  WHERE "markettor_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestPluginAPI.test_listing_plugins_is_not_nplus1.10
  '''
  SELECT "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_organization"
  WHERE "markettor_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestPluginAPI.test_listing_plugins_is_not_nplus1.11
  '''
  SELECT COUNT(*) AS "__count"
  FROM "markettor_plugin"
  WHERE ("markettor_plugin"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         OR "markettor_plugin"."is_global"
         OR "markettor_plugin"."id" IN
           (SELECT U0."plugin_id"
            FROM "markettor_pluginconfig" U0
            INNER JOIN "markettor_team" U1 ON (U0."team_id" = U1."id")
            WHERE (NOT U0."deleted"
                   AND U1."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid)))
  '''
# ---
# name: TestPluginAPI.test_listing_plugins_is_not_nplus1.12
  '''
  SELECT "markettor_plugin"."id",
         "markettor_plugin"."organization_id",
         "markettor_plugin"."plugin_type",
         "markettor_plugin"."is_global",
         "markettor_plugin"."is_preinstalled",
         "markettor_plugin"."is_stateless",
         "markettor_plugin"."name",
         "markettor_plugin"."description",
         "markettor_plugin"."url",
         "markettor_plugin"."icon",
         "markettor_plugin"."config_schema",
         "markettor_plugin"."tag",
         "markettor_plugin"."archive",
         "markettor_plugin"."latest_tag",
         "markettor_plugin"."latest_tag_checked_at",
         "markettor_plugin"."capabilities",
         "markettor_plugin"."metrics",
         "markettor_plugin"."public_jobs",
         "markettor_plugin"."error",
         "markettor_plugin"."from_json",
         "markettor_plugin"."from_web",
         "markettor_plugin"."source",
         "markettor_plugin"."created_at",
         "markettor_plugin"."updated_at",
         "markettor_plugin"."log_level",
         "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_plugin"
  LEFT OUTER JOIN "markettor_organization" ON ("markettor_plugin"."organization_id" = "markettor_organization"."id")
  WHERE ("markettor_plugin"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         OR "markettor_plugin"."is_global"
         OR "markettor_plugin"."id" IN
           (SELECT U0."plugin_id"
            FROM "markettor_pluginconfig" U0
            INNER JOIN "markettor_team" U1 ON (U0."team_id" = U1."id")
            WHERE (NOT U0."deleted"
                   AND U1."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid)))
  LIMIT 100
  '''
# ---
# name: TestPluginAPI.test_listing_plugins_is_not_nplus1.13
  '''
  SELECT "markettor_user"."id",
         "markettor_user"."password",
         "markettor_user"."last_login",
         "markettor_user"."first_name",
         "markettor_user"."last_name",
         "markettor_user"."is_staff",
         "markettor_user"."is_active",
         "markettor_user"."date_joined",
         "markettor_user"."uuid",
         "markettor_user"."current_organization_id",
         "markettor_user"."current_team_id",
         "markettor_user"."email",
         "markettor_user"."pending_email",
         "markettor_user"."temporary_token",
         "markettor_user"."distinct_id",
         "markettor_user"."is_email_verified",
         "markettor_user"."has_seen_product_intro_for",
         "markettor_user"."strapi_id",
         "markettor_user"."theme_mode",
         "markettor_user"."partial_notification_settings",
         "markettor_user"."anonymize_data",
         "markettor_user"."toolbar_mode",
         "markettor_user"."hedgehog_config",
         "markettor_user"."events_column_config",
         "markettor_user"."email_opt_in"
  FROM "markettor_user"
  WHERE "markettor_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestPluginAPI.test_listing_plugins_is_not_nplus1.14
  '''
  SELECT "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_organization"
  WHERE "markettor_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestPluginAPI.test_listing_plugins_is_not_nplus1.15
  '''
  SELECT "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_organization"
  WHERE "markettor_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestPluginAPI.test_listing_plugins_is_not_nplus1.16
  '''
  SELECT 1 AS "a"
  FROM "markettor_organizationmembership"
  WHERE ("markettor_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "markettor_organizationmembership"."user_id" = 2)
  LIMIT 1
  '''
# ---
# name: TestPluginAPI.test_listing_plugins_is_not_nplus1.17
  '''
  SELECT "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_organization"
  WHERE "markettor_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestPluginAPI.test_listing_plugins_is_not_nplus1.18
  '''
  SELECT COUNT(*) AS "__count"
  FROM "markettor_plugin"
  WHERE ("markettor_plugin"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         OR "markettor_plugin"."is_global"
         OR "markettor_plugin"."id" IN
           (SELECT U0."plugin_id"
            FROM "markettor_pluginconfig" U0
            INNER JOIN "markettor_team" U1 ON (U0."team_id" = U1."id")
            WHERE (NOT U0."deleted"
                   AND U1."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid)))
  '''
# ---
# name: TestPluginAPI.test_listing_plugins_is_not_nplus1.19
  '''
  SELECT "markettor_plugin"."id",
         "markettor_plugin"."organization_id",
         "markettor_plugin"."plugin_type",
         "markettor_plugin"."is_global",
         "markettor_plugin"."is_preinstalled",
         "markettor_plugin"."is_stateless",
         "markettor_plugin"."name",
         "markettor_plugin"."description",
         "markettor_plugin"."url",
         "markettor_plugin"."icon",
         "markettor_plugin"."config_schema",
         "markettor_plugin"."tag",
         "markettor_plugin"."archive",
         "markettor_plugin"."latest_tag",
         "markettor_plugin"."latest_tag_checked_at",
         "markettor_plugin"."capabilities",
         "markettor_plugin"."metrics",
         "markettor_plugin"."public_jobs",
         "markettor_plugin"."error",
         "markettor_plugin"."from_json",
         "markettor_plugin"."from_web",
         "markettor_plugin"."source",
         "markettor_plugin"."created_at",
         "markettor_plugin"."updated_at",
         "markettor_plugin"."log_level",
         "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_plugin"
  LEFT OUTER JOIN "markettor_organization" ON ("markettor_plugin"."organization_id" = "markettor_organization"."id")
  WHERE ("markettor_plugin"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         OR "markettor_plugin"."is_global"
         OR "markettor_plugin"."id" IN
           (SELECT U0."plugin_id"
            FROM "markettor_pluginconfig" U0
            INNER JOIN "markettor_team" U1 ON (U0."team_id" = U1."id")
            WHERE (NOT U0."deleted"
                   AND U1."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid)))
  LIMIT 100
  '''
# ---
# name: TestPluginAPI.test_listing_plugins_is_not_nplus1.2
  '''
  SELECT "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_organization"
  WHERE "markettor_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestPluginAPI.test_listing_plugins_is_not_nplus1.20
  '''
  SELECT "markettor_user"."id",
         "markettor_user"."password",
         "markettor_user"."last_login",
         "markettor_user"."first_name",
         "markettor_user"."last_name",
         "markettor_user"."is_staff",
         "markettor_user"."is_active",
         "markettor_user"."date_joined",
         "markettor_user"."uuid",
         "markettor_user"."current_organization_id",
         "markettor_user"."current_team_id",
         "markettor_user"."email",
         "markettor_user"."pending_email",
         "markettor_user"."temporary_token",
         "markettor_user"."distinct_id",
         "markettor_user"."is_email_verified",
         "markettor_user"."has_seen_product_intro_for",
         "markettor_user"."strapi_id",
         "markettor_user"."theme_mode",
         "markettor_user"."partial_notification_settings",
         "markettor_user"."anonymize_data",
         "markettor_user"."toolbar_mode",
         "markettor_user"."hedgehog_config",
         "markettor_user"."events_column_config",
         "markettor_user"."email_opt_in"
  FROM "markettor_user"
  WHERE "markettor_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestPluginAPI.test_listing_plugins_is_not_nplus1.21
  '''
  SELECT "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_organization"
  WHERE "markettor_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestPluginAPI.test_listing_plugins_is_not_nplus1.22
  '''
  SELECT "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_organization"
  WHERE "markettor_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestPluginAPI.test_listing_plugins_is_not_nplus1.23
  '''
  SELECT 1 AS "a"
  FROM "markettor_organizationmembership"
  WHERE ("markettor_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "markettor_organizationmembership"."user_id" = 2)
  LIMIT 1
  '''
# ---
# name: TestPluginAPI.test_listing_plugins_is_not_nplus1.24
  '''
  SELECT "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_organization"
  WHERE "markettor_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestPluginAPI.test_listing_plugins_is_not_nplus1.25
  '''
  SELECT COUNT(*) AS "__count"
  FROM "markettor_plugin"
  WHERE ("markettor_plugin"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         OR "markettor_plugin"."is_global"
         OR "markettor_plugin"."id" IN
           (SELECT U0."plugin_id"
            FROM "markettor_pluginconfig" U0
            INNER JOIN "markettor_team" U1 ON (U0."team_id" = U1."id")
            WHERE (NOT U0."deleted"
                   AND U1."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid)))
  '''
# ---
# name: TestPluginAPI.test_listing_plugins_is_not_nplus1.26
  '''
  SELECT "markettor_plugin"."id",
         "markettor_plugin"."organization_id",
         "markettor_plugin"."plugin_type",
         "markettor_plugin"."is_global",
         "markettor_plugin"."is_preinstalled",
         "markettor_plugin"."is_stateless",
         "markettor_plugin"."name",
         "markettor_plugin"."description",
         "markettor_plugin"."url",
         "markettor_plugin"."icon",
         "markettor_plugin"."config_schema",
         "markettor_plugin"."tag",
         "markettor_plugin"."archive",
         "markettor_plugin"."latest_tag",
         "markettor_plugin"."latest_tag_checked_at",
         "markettor_plugin"."capabilities",
         "markettor_plugin"."metrics",
         "markettor_plugin"."public_jobs",
         "markettor_plugin"."error",
         "markettor_plugin"."from_json",
         "markettor_plugin"."from_web",
         "markettor_plugin"."source",
         "markettor_plugin"."created_at",
         "markettor_plugin"."updated_at",
         "markettor_plugin"."log_level",
         "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_plugin"
  LEFT OUTER JOIN "markettor_organization" ON ("markettor_plugin"."organization_id" = "markettor_organization"."id")
  WHERE ("markettor_plugin"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         OR "markettor_plugin"."is_global"
         OR "markettor_plugin"."id" IN
           (SELECT U0."plugin_id"
            FROM "markettor_pluginconfig" U0
            INNER JOIN "markettor_team" U1 ON (U0."team_id" = U1."id")
            WHERE (NOT U0."deleted"
                   AND U1."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid)))
  LIMIT 100
  '''
# ---
# name: TestPluginAPI.test_listing_plugins_is_not_nplus1.3
  '''
  SELECT 1 AS "a"
  FROM "markettor_organizationmembership"
  WHERE ("markettor_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "markettor_organizationmembership"."user_id" = 2)
  LIMIT 1
  '''
# ---
# name: TestPluginAPI.test_listing_plugins_is_not_nplus1.4
  '''
  SELECT "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_organization"
  WHERE "markettor_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestPluginAPI.test_listing_plugins_is_not_nplus1.5
  '''
  SELECT COUNT(*) AS "__count"
  FROM "markettor_plugin"
  WHERE ("markettor_plugin"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         OR "markettor_plugin"."is_global"
         OR "markettor_plugin"."id" IN
           (SELECT U0."plugin_id"
            FROM "markettor_pluginconfig" U0
            INNER JOIN "markettor_team" U1 ON (U0."team_id" = U1."id")
            WHERE (NOT U0."deleted"
                   AND U1."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid)))
  '''
# ---
# name: TestPluginAPI.test_listing_plugins_is_not_nplus1.6
  '''
  SELECT "markettor_user"."id",
         "markettor_user"."password",
         "markettor_user"."last_login",
         "markettor_user"."first_name",
         "markettor_user"."last_name",
         "markettor_user"."is_staff",
         "markettor_user"."is_active",
         "markettor_user"."date_joined",
         "markettor_user"."uuid",
         "markettor_user"."current_organization_id",
         "markettor_user"."current_team_id",
         "markettor_user"."email",
         "markettor_user"."pending_email",
         "markettor_user"."temporary_token",
         "markettor_user"."distinct_id",
         "markettor_user"."is_email_verified",
         "markettor_user"."has_seen_product_intro_for",
         "markettor_user"."strapi_id",
         "markettor_user"."theme_mode",
         "markettor_user"."partial_notification_settings",
         "markettor_user"."anonymize_data",
         "markettor_user"."toolbar_mode",
         "markettor_user"."hedgehog_config",
         "markettor_user"."events_column_config",
         "markettor_user"."email_opt_in"
  FROM "markettor_user"
  WHERE "markettor_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestPluginAPI.test_listing_plugins_is_not_nplus1.7
  '''
  SELECT "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_organization"
  WHERE "markettor_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestPluginAPI.test_listing_plugins_is_not_nplus1.8
  '''
  SELECT "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_organization"
  WHERE "markettor_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestPluginAPI.test_listing_plugins_is_not_nplus1.9
  '''
  SELECT 1 AS "a"
  FROM "markettor_organizationmembership"
  WHERE ("markettor_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "markettor_organizationmembership"."user_id" = 2)
  LIMIT 1
  '''
# ---
